--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
 <div id="main" class="container">
 	<h1>Oaxlider demo</h1>
 	<div id="wrp">
-		<div id="instance">
+		<div id="myslides">
 			<ul>
 				<li><img src="img/1.jpg" alt=""></li>
 				<li><img src="img/2.jpg" alt=""></li>
@@ -27,7 +27,7 @@
 		</div>
 		<script type="text/javascript">
 		$(function(){
-			$("#instance").oaxlider({
+			$("#myslides").oaxlider({
 				"width" : 622,
 				"height" : 416
 			});
