--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,8 @@
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-	<script type="text/javascript" src="../jquery.oaxlider.min.js"></script>
+	<!-- <script type="text/javascript" src="../jquery.oaxlider.min.js"></script> -->
+	<script type="text/javascript" src="../src/jquery.oaxlider.js"></script>
 	<link rel="stylesheet" href="../css/oaxlider.css">
 	<style type="text/css">
 	#wrp {width: 622px;}
